Small spacing fixes

--- a/src/buttons.css
+++ b/src/buttons.css
@@ -88,10 +88,10 @@
     content: '';
     display: block;
     position: absolute;
-    left: -2rem;
-    top: -2rem;
-    right: -2rem;
-    bottom: -2rem;
+    left: -1.5rem;
+    top: -1.5rem;
+    right: -1.5rem;
+    bottom: -1.5rem;
 }
 
 .nq-button-s:hover {
