--- a/src/layout.css
+++ b/src/layout.css
@@ -59,7 +59,7 @@ body {
 
 @media (max-width: 450px) {
     .nq-card-header {
-        padding: 3.5rem;
+        padding: 3rem;
     }
 }
 
